=== (in Git)

* Bugfixes:
  * Wait longer for child process terminate properly (max 20 seconds).
    Imported tests from RubyServices project. (Closes #18).

  * Updated ServiceFB to work with FB > 0.18.

=== 0.3.4 / 2008-01-02

  * Strict Gem dependencies for mongrel_service. This version is compatible
    only with mongrel 1.0.x, 1.1.x and with win32-service 0.5.x.

  * Fixed issues realted to Win32::Service and gem_plugin being registered with
    different names due win32-service changes.

=== 0.3.3 / 2007-10-26

  * Properly display package/gem version for mongrel_service. Closes #13823.

  * Updated ServiceFB to r80 to solve issue when compiling with FB > 0.17.

=== 0.3.2 / 2007-06-01

* Solved detection of parent process at ServiceFB level
  (solves the x64 Windows issues).

* Upgraded to ServiceFB 'trunk' (but pistoned it, just in case).

* Fixed problems with ruby installations outside PATH or inside folders with spaces.

* Activate FB pedantic warnings by default (is really useful).

=== 0.3.1 / 2007-01-19

* Single Service (SingleMongrel) object type implemented.

* Updated Rakefile to reflect the new building steps.

* Removed SendSignal, too hackish for my taste, replaced with complete FB solution.

* Added basic Process monitoring and re-spawning.